update startup wizard

--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvguide.html
@@ -21,7 +21,7 @@
                 <div>
                     <label for="selectType">${LabelDataProvider}</label>
                     <select id="selectType" data-mini="true" required="required">
-                        <option value="schedulesdirect">Schedules Direct</option>
+                        <option value="SchedulesDirect">Schedules Direct</option>
                     </select>
                 </div>
                 <br />
