added auto-organize setting

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -52,6 +52,12 @@
                     </div>
                     <br />
                     <br />
+                    <div>
+                        <paper-checkbox id="chkOrganize">${OptionSendRecordingsToAutoOrganize}</paper-checkbox>
+                        <div class="fieldDescription paperCheckboxFieldDescription">${OptionSendRecordingsToAutoOrganizeHelp}</div>
+                    </div>
+                    <br />
+                    <br />
                     <ul data-role="listview" class="ulForm">
                         <li>
                             <button type="submit" data-role="none" class="clearButton">
