added default padding settings

--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -91,7 +91,7 @@
                     <p id="itemDeathDate"></p>
                     <p id="seriesAirTime"></p>
                     <p class="airDate"></p>
-                    <p class="itemOverview smoothScrollY"></p>
+                    <p class="itemOverview topOverview"></p>
                 </div>
                 <div class="collectionItems"></div>
                 <div id="childrenCollapsible" class="hide detailSection">
@@ -177,6 +177,7 @@
                     </h1>
                     <div>
                         <div class="tabDetails">
+                            <p class="itemOverview bottomOverview"></p>
                             <p id="players"></p>
                             <p class="itemExternalLinks"></p>
                             <p class="itemStudios"></p>
