--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -35,12 +35,12 @@
                             <div class="activeProgramItems itemsContainer"></div>
                             <br />
                         </div>
-                        <div id="upcomingPrograms" class="homePageSection">
+                        <div id="upcomingPrograms" class="homePageSection" style="margin-top:1em;">
                             <h1 class="listHeader">${HeaderUpcomingPrograms}</h1>
                             <div class="upcomingProgramItems itemsContainer"></div>
                             <br />
                         </div>
-                        <div id="upcomingTvMovies" class="homePageSection">
+                        <div id="upcomingTvMovies" class="homePageSection" style="margin-top:1em;">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingMovies}</h1>
                                 <a href="livetvitems.html?type=movies" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
@@ -48,7 +48,7 @@
                             <div class="upcomingTvMovieItems itemsContainer"></div>
                             <br />
                         </div>
-                        <div id="upcomingSports" class="homePageSection">
+                        <div id="upcomingSports" class="homePageSection" style="margin-top:1em;">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingSports}</h1>
                                 <a href="livetvitems.html?type=sports" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
@@ -56,7 +56,7 @@
                             <div class="upcomingSportsItems itemsContainer"></div>
                             <br />
                         </div>
-                        <div id="upcomingKids" class="homePageSection">
+                        <div id="upcomingKids" class="homePageSection" style="margin-top:1em;">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingForKids}</h1>
                                 <a href="livetvitems.html?type=kids" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
