--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -17,7 +17,7 @@
                 <paper-tab class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs scopedLibraryViewNav">
-                <a href="movies.html" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+                <a href="movies.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
                 <a href="movies.html?tab=1"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
                 <a href="movies.html?tab=2" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
                 <a href="movies.html?tab=3"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
