--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvtuner.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvtuner.html
@@ -24,6 +24,7 @@
                         <select id="selectTunerType" data-mini="true" required="required">
                             <option value="hdhomerun">HDHomerun</option>
                         </select>
+                        <div class="fieldDescription">${AdditionalLiveTvProvidersCanBeInstalledLater}</div>
                     </div>
                     <br />
                     <div>
