--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
@@ -22,4 +22,6 @@
 <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="bower_components/paper-item/paper-item-body.html">
+<link rel="import" href="bower_components/paper-radio-button/paper-radio-button.html">
+<link rel="import" href="bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="thirdparty/emby-icons.html">
