--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvguide.html
@@ -23,6 +23,7 @@
                     <select id="selectType" data-mini="true" required="required">
                         <option value="SchedulesDirect">Schedules Direct</option>
                     </select>
+                    <div class="fieldDescription">${AdditionalLiveTvProvidersCanBeInstalledLater}</div>
                 </div>
                 <br />
                 <div class="providerTemplate">
