--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -7,7 +7,7 @@
     <div id="moviesPage" data-role="page" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie" data-require="scripts/moviesrecommended">
 
         <div class="libraryViewNav libraryViewNavWithMinHeight">
-            <paper-tabs style="min-width:770px;margin:auto;">
+            <paper-tabs class="papertabs-800 scrollingPaperTabs">
                 <paper-tab><iron-icon icon="info"></iron-icon>${TabSuggestions}</paper-tab>
                 <paper-tab><iron-icon icon="local-movies"></iron-icon>${TabMovies}</paper-tab>
                 <paper-tab class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</paper-tab>
@@ -144,88 +144,81 @@
         <div data-role="panel" class="viewPanel movieViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
 
-                <div data-role="controlgroup" data-type="horizontal" data-mini="true" class="viewPanelTabs">
-                    <a href="#" data-role="button" class="viewTabButton" data-tab="tabFilter">${TabFilter}</a>
+                <fieldset data-role="controlgroup">
+                    <legend>
+                        ${HeaderFilters}
+                    </legend>
+                    <input class="chkStandardFilter" type="checkbox" id="chkPlayedMovie" data-filter="IsPlayed" data-mini="true">
+                    <label for="chkPlayedMovie">${OptionPlayed}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkUnplayedMovie" data-filter="IsUnPlayed" data-mini="true">
+                    <label for="chkUnplayedMovie">${OptionUnplayed}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkResumableMovie" data-filter="IsResumable" data-mini="true">
+                    <label for="chkResumableMovie">${OptionResumable}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteMovie" data-filter="IsFavorite" data-mini="true">
+                    <label for="chkIsFavoriteMovie">${OptionFavorite}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkLikesMovie" data-filter="Likes" data-mini="true">
+                    <label for="chkLikesMovie">${OptionLikes}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesMovie" data-filter="Dislikes" data-mini="true">
+                    <label for="chkDislikesMovie">${OptionDislikes}</label>
+                </fieldset>
+                <br />
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
+                    <h2>${HeaderGenres}</h2>
+
+                    <div class="filterOptions">
+                    </div>
                 </div>
 
-                <div class="tabFilter viewTab">
-                    <fieldset data-role="controlgroup">
-                        <legend>
-                            ${HeaderFilters}
-                        </legend>
-                        <input class="chkStandardFilter" type="checkbox" id="chkPlayedMovie" data-filter="IsPlayed" data-mini="true">
-                        <label for="chkPlayedMovie">${OptionPlayed}</label>
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
+                    <h2>${HeaderParentalRatings}</h2>
 
-                        <input class="chkStandardFilter" type="checkbox" id="chkUnplayedMovie" data-filter="IsUnPlayed" data-mini="true">
-                        <label for="chkUnplayedMovie">${OptionUnplayed}</label>
-
-                        <input class="chkStandardFilter" type="checkbox" id="chkResumableMovie" data-filter="IsResumable" data-mini="true">
-                        <label for="chkResumableMovie">${OptionResumable}</label>
-
-                        <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteMovie" data-filter="IsFavorite" data-mini="true">
-                        <label for="chkIsFavoriteMovie">${OptionFavorite}</label>
-
-                        <input class="chkStandardFilter" type="checkbox" id="chkLikesMovie" data-filter="Likes" data-mini="true">
-                        <label for="chkLikesMovie">${OptionLikes}</label>
-
-                        <input class="chkStandardFilter" type="checkbox" id="chkDislikesMovie" data-filter="Dislikes" data-mini="true">
-                        <label for="chkDislikesMovie">${OptionDislikes}</label>
-                    </fieldset>
-                    <br />
-
-                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
-                        <h2>${HeaderGenres}</h2>
-
-                        <div class="filterOptions">
-                        </div>
+                    <div class="filterOptions">
                     </div>
+                </div>
 
-                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
-                        <h2>${HeaderParentalRatings}</h2>
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
+                    <h2>${HeaderTags}</h2>
 
-                        <div class="filterOptions">
-                        </div>
+                    <div class="filterOptions">
                     </div>
+                </div>
 
-                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
-                        <h2>${HeaderTags}</h2>
+                <div data-role="collapsible" data-collapsed="true" data-mini="true">
+                    <h2>${HeaderVideoTypes}</h2>
 
-                        <div class="filterOptions">
-                        </div>
+                    <div data-role="controlgroup">
+
+                        <input class="chkVideoTypeFilter chkBluray" type="checkbox" id="chkBlurayMovie" data-filter="Bluray" data-mini="true">
+                        <label for="chkBlurayMovie">${OptionBluray}</label>
+
+                        <input class="chkVideoTypeFilter chkDvd" type="checkbox" id="chkDvdMovie" data-filter="Dvd" data-mini="true">
+                        <label for="chkDvdMovie">${OptionDvd}</label>
+
+                        <input class="chkVideoTypeFilter chkIso" type="checkbox" id="chkIsoMovie" data-filter="Iso" data-mini="true">
+                        <label for="chkIsoMovie">${OptionIso}</label>
+
+                        <input class="chkHDFilter IsHD" type="checkbox" id="chkHDMovie" data-filter="IsHD" data-mini="true">
+                        <label for="chkHDMovie">${OptionIsHD}</label>
+
+                        <input class="chkSDFilter IsHD" type="checkbox" id="chkSDMovie" data-filter="IsHD" data-mini="true">
+                        <label for="chkSDMovie">${OptionIsSD}</label>
+
+                        <input class="chk3DFilter chk3D" type="checkbox" id="chk3DMovie" data-filter="Digital3D,Sbs3D" data-mini="true">
+                        <label for="chk3DMovie">${Option3D}</label>
                     </div>
+                </div>
 
-                    <div data-role="collapsible" data-collapsed="true" data-mini="true">
-                        <h2>${HeaderVideoTypes}</h2>
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
+                    <h2>${HeaderYears}</h2>
 
-                        <div data-role="controlgroup">
-
-                            <input class="chkVideoTypeFilter chkBluray" type="checkbox" id="chkBlurayMovie" data-filter="Bluray" data-mini="true">
-                            <label for="chkBlurayMovie">${OptionBluray}</label>
-
-                            <input class="chkVideoTypeFilter chkDvd" type="checkbox" id="chkDvdMovie" data-filter="Dvd" data-mini="true">
-                            <label for="chkDvdMovie">${OptionDvd}</label>
-
-                            <input class="chkVideoTypeFilter chkIso" type="checkbox" id="chkIsoMovie" data-filter="Iso" data-mini="true">
-                            <label for="chkIsoMovie">${OptionIso}</label>
-
-                            <input class="chkHDFilter IsHD" type="checkbox" id="chkHDMovie" data-filter="IsHD" data-mini="true">
-                            <label for="chkHDMovie">${OptionIsHD}</label>
-
-                            <input class="chkSDFilter IsHD" type="checkbox" id="chkSDMovie" data-filter="IsHD" data-mini="true">
-                            <label for="chkSDMovie">${OptionIsSD}</label>
-
-                            <input class="chk3DFilter chk3D" type="checkbox" id="chk3DMovie" data-filter="Digital3D,Sbs3D" data-mini="true">
-                            <label for="chk3DMovie">${Option3D}</label>
-                        </div>
+                    <div class="filterOptions">
                     </div>
-
-                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
-                        <h2>${HeaderYears}</h2>
-
-                        <div class="filterOptions">
-                        </div>
-                    </div>
-
                 </div>
             </form>
         </div>
