update live tv menu

--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -4,7 +4,7 @@
     <title>${TitleSupport}</title>
 </head>
 <body>
-    <div id="supporterPage" data-role="page" class="page type-interior" data-require="scripts/supporterpage,scripts/registrationservices">
+    <div id="supporterPage" data-role="page" class="page type-interior" data-require="scripts/supporterpage,scripts/registrationservices,fontawesome">
 
         <div data-role="content">
             <div class="content-primary">
