--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="selectServerPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-theme="b" data-require="scripts/selectserver,paperbuttonstyle">
+    <div id="selectServerPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-theme="b" data-require="scripts/selectserver,fontawesome">
 
         <div data-role="content">
 
