--- a/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
@@ -168,6 +168,24 @@
                         </div>
                     </div>
 
+                    <div data-role="collapsible">
+                        <h2>${HeaderVideos}</h2>
+                        <div>
+                            <div>
+                                <br />
+                                <paper-checkbox class="chkEnableVideoFrameAnalysis">${OptionEnableVideoFrameAnalysis}</paper-checkbox>
+                                <div class="fieldDescription paperCheckboxFieldDescription">${OptionEnableVideoFrameAnalysisHelp}</div>
+                            </div>
+                            <div>
+                                <br />
+                                <paper-input type="number" step="10" min="0" class="txtVideoFrameAnalysisLimit" label="${LabelVideoFrameAnalysisLimit}">
+                                    <div suffix>MB</div>
+                                </paper-input>
+                            </div>
+                            <br />
+                        </div>
+                    </div>
+
                     <br /><br />
                     <ul data-role="listview" class="ulForm">
                         <li>
