--- a/MediaBrowser.WebDashboard/dashboard-ui/autoorganizetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/autoorganizetv.html
@@ -4,7 +4,7 @@
     <title>${TitleAutoOrganize}</title>
 </head>
 <body>
-    <div id="libraryFileOrganizerPage" data-role="page" class="page type-interior organizePage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize" data-require="scripts/autoorganizetv">
+    <div id="libraryFileOrganizerPage" data-role="page" class="page type-interior organizePage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize" data-require="jqmtable,scripts/autoorganizetv">
 
         <div data-role="content">
             <div class="content-primary">
