--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvTimerPage" data-role="page" class="page libraryPage liveTvPage noSecondaryNavPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvtimer,livetvcss,jqmicons" data-backbutton="true" data-menubutton="false">
+    <div id="liveTvTimerPage" data-role="page" class="page libraryPage liveTvPage noSecondaryNavPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvtimer,livetvcss" data-backbutton="true" data-menubutton="false">
 
         <div data-role="content">
 
