--- a/MediaBrowser.WebDashboard/dashboard-ui/serversecurity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/serversecurity.html
@@ -4,7 +4,7 @@
     <title>${TitleAdvanced}</title>
 </head>
 <body>
-    <div id="serverSecurityPage" data-role="page" class="page type-interior advancedConfigurationPage" data-require="scripts/serversecurity,detailtablecss">
+    <div id="serverSecurityPage" data-role="page" class="page type-interior advancedConfigurationPage" data-require="jqmtable,scripts/serversecurity,detailtablecss">
 
         <div data-role="content">
             <div class="content-primary">
