--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
@@ -11362,6 +11362,7 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
 
       /**
        * Returns the currently focused item.
+       * @type {?Object}
        */
       focusedItem: {
         observer: '_focusedItemChanged',
