--- a/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
@@ -4,7 +4,7 @@
     <title>${TitleSupport}</title>
 </head>
 <body>
-    <div id="supporterKeyPage" data-role="page" class="page type-interior" data-require="scripts/supporterkeypage">
+    <div id="supporterKeyPage" data-role="page" class="page type-interior" data-require="jqmpopup,scripts/supporterkeypage">
 
         <div data-role="content">
             <div class="content-primary">
