--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -7,7 +7,7 @@
     <div id="moviesPage" data-role="page" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie" data-require="scripts/moviesrecommended">
 
         <div class="libraryViewNav libraryViewNavWithMinHeight">
-            <paper-tabs class="scrollingPaperTabs" hidescrollbuttons noink>
+            <paper-tabs hidescrollbuttons noink>
                 <paper-tab><iron-icon icon="info"></iron-icon>${TabSuggestions}</paper-tab>
                 <paper-tab><iron-icon icon="local-movies"></iron-icon>${TabMovies}</paper-tab>
                 <paper-tab class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</paper-tab>
