--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -15,7 +15,7 @@
                 <paper-tab><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs">
-                <a href="index.html" class="ui-btn-active"><iron-icon icon="home"></iron-icon>${TabHome}</a>
+                <a href="index.html"><iron-icon icon="home"></iron-icon>${TabHome}</a>
                 <a href="index.html?tab=1"><iron-icon icon="navigate-next"></iron-icon>${TabNextUp}</a>
                 <a href="index.html?tab=2"><iron-icon icon="favorite"></iron-icon>${TabFavorites}</a>
                 <a href="index.html?tab=3"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
