--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -16,7 +16,7 @@
                 <paper-tab><iron-icon icon="refresh"></iron-icon>${TabSeries}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs">
-                <a href="livetv.html" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+                <a href="livetv.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
                 <a href="livetv.html?tab=1"><iron-icon icon="grid-on"></iron-icon>${TabGuide}</a>
                 <a href="livetv.html?tab=2"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
                 <a href="livetv.html?tab=3"><iron-icon icon="slideshow"></iron-icon>${TabRecordings}</a>
