--- a/MediaBrowser.WebDashboard/dashboard-ui/channels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channels.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="channelsPage" data-role="page" class="page libraryPage channelsPage pageWithAbsoluteTabs" data-contextname="${HeaderChannels}" data-require="scripts/channels,scripts/channelslatest,scripts/sections">
+    <div id="channelsPage" data-role="page" data-dom-cache="true" class="page libraryPage channelsPage pageWithAbsoluteTabs" data-contextname="${HeaderChannels}" data-require="scripts/channels,scripts/channelslatest,scripts/sections">
 
         <div class="libraryViewNav scopedLibraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs hidescrollbuttons noink>
@@ -13,7 +13,7 @@
             </paper-tabs>
             <div class="legacyTabs">
                 <a href="channels.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
-                <a href="channels.html?tab=1" class="ui-btn-active"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
+                <a href="channels.html?tab=1"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
             </div>
         </div>
         <div class="ehsContent fullWidth">
