Add supporter desc

--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -87,7 +87,7 @@
                         <input type="hidden" name="cmd" id="ppCmd" value="_xclick">
                         <input type="hidden" name="business" value="donation@mediabrowser.tv">
                         <input type="hidden" name="currency_code" value="USD">
-                        <input type="hidden" name="item_name" value="Emby Supporter">
+                        <input type="hidden" name="item_name" id="ppItemName" value="Emby Supporter">
                         <input type="hidden" name="item_number" id="ppItemNo" value="MBSupporter">
                         <input type="hidden" name="notify_url" value="http://mb3admin.com/admin/service/services/ppipn.php">
                         <input type="hidden" name="return" id="returnUrl" value="#">
