fix metadata sidebar for IE

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -14,7 +14,7 @@
             <div class="editPageInnerContent" style="visibility:hidden;">
                 <h1 class="itemName editPageName">&nbsp;</h1>
                 <br />
-                <paper-tabs hidescrollbuttons noink>
+                <paper-tabs hidescrollbuttons>
                     <paper-tab class="metadataTabButton">${TabMetadata}</paper-tab>
                     <paper-tab class="subtitleTabButton hide">${TabSubtitles}</paper-tab>
                     <paper-tab class="collectionItemsTabButton hide">${TabCollectionTitles}</paper-tab>
