--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -8,11 +8,11 @@
         <div class="libraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs hidescrollbuttons noink>
                 <paper-tab><iron-icon icon="info"></iron-icon>${TabSuggestions}</paper-tab>
-                <paper-tab><iron-icon icon="local-movies"></iron-icon>${TabMovies}</paper-tab>
-                <paper-tab class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</paper-tab>
-                <paper-tab><iron-icon icon="video-library"></iron-icon>${TabCollections}</paper-tab>
-                <paper-tab><iron-icon icon="video-library"></iron-icon>${TabGenres}</paper-tab>
-                <paper-tab class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</paper-tab>
+                <paper-tab><iron-icon icon="album"></iron-icon>${TabAlbums}</paper-tab>
+                <paper-tab><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</paper-tab>
+                <paper-tab><iron-icon icon="music-note"></iron-icon>${TabArtists}</paper-tab>
+                <paper-tab><iron-icon icon="music-note"></iron-icon>${TabSongs}</paper-tab>
+                <paper-tab><iron-icon icon="library-music"></iron-icon>${TabGenres}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs scopedLibraryViewNav">
                 <a href="musicrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
@@ -62,6 +62,17 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent" data-index="1">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                            <div class="selectionCommands" style="display: none;">
+                                <div class="selectionCommandsControlGroup">
+                                    <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer"></div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
@@ -99,25 +110,72 @@
             </neon-animated-pages>
         </div>
 
+        <div data-role="panel" class="viewPanel albumsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+            <form>
+
+                <fieldset data-role="controlgroup">
+                    <legend>${HeaderFilters}</legend>
+                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteAlbums" data-filter="IsFavorite" data-mini="true">
+                    <label for="chkIsFavoriteAlbums">${OptionFavorite}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkLikesAlbums" data-filter="Likes" data-mini="true">
+                    <label for="chkLikesAlbums">${OptionLikes}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesAlbums" data-filter="Dislikes" data-mini="true">
+                    <label for="chkDislikesAlbums">${OptionDislikes}</label>
+                </fieldset>
+                <br />
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
+                    <h2>${HeaderGenres}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
+                    <h2>${HeaderParentalRatings}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
+                    <h2>${HeaderTags}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
+                    <h2>${HeaderYears}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
         <div data-role="panel" class="viewPanel songsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
 
                 <fieldset data-role="controlgroup">
                     <legend>${HeaderFilters}</legend>
-                    <input class="chkStandardFilter" type="checkbox" name="chkPlayed" id="chkPlayed" data-filter="IsPlayed" data-mini="true">
-                    <label for="chkPlayed">${OptionPlayed}</label>
+                    <input class="chkStandardFilter" type="checkbox" id="chkPlayedSongs" data-filter="IsPlayed" data-mini="true">
+                    <label for="chkPlayedSongs">${OptionPlayed}</label>
 
-                    <input class="chkStandardFilter" type="checkbox" name="chkUnplayed" id="chkUnplayed" data-filter="IsUnPlayed" data-mini="true">
-                    <label for="chkUnplayed">${OptionUnplayed}</label>
+                    <input class="chkStandardFilter" type="checkbox" id="chkUnplayedSongs" data-filter="IsUnPlayed" data-mini="true">
+                    <label for="chkUnplayedSongs">${OptionUnplayed}</label>
 
-                    <input class="chkStandardFilter" type="checkbox" name="chkIsFavorite" id="chkIsFavorite" data-filter="IsFavorite" data-mini="true">
-                    <label for="chkIsFavorite">${OptionFavorite}</label>
+                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteSongs" data-filter="IsFavorite" data-mini="true">
+                    <label for="chkIsFavoriteSongs">${OptionFavorite}</label>
 
-                    <input class="chkStandardFilter" type="checkbox" name="chkLikes" id="chkLikes" data-filter="Likes" data-mini="true">
-                    <label for="chkLikes">${OptionLikes}</label>
+                    <input class="chkStandardFilter" type="checkbox" id="chkLikesSongs" data-filter="Likes" data-mini="true">
+                    <label for="chkLikesSongs">${OptionLikes}</label>
 
-                    <input class="chkStandardFilter" type="checkbox" name="chkDislikes" id="chkDislikes" data-filter="Dislikes" data-mini="true">
-                    <label for="chkDislikes">${OptionDislikes}</label>
+                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesSongs" data-filter="Dislikes" data-mini="true">
+                    <label for="chkDislikesSongs">${OptionDislikes}</label>
 
                 </fieldset>
                 <br />
